--- a/task26/index.html
+++ b/task26/index.html
@@ -91,7 +91,6 @@
 
 		<div class="new"><button new="true">新的飞船起飞</button></div>
 	</div>
-	<script type="text/javascript" src="jquery.js"></script>
-	<script type="text/javascript" src="index.js"></script>
+	<script type="text/javascript" src="index2.js"></script>
 </body>
 </html>
